Bugfixing
Fixing bugs regarding the Server-Client Connection and the Encryption